testsuite/bsc.interra/messages/EUnboundTyVar/EUnboundTyVar1.bs.bsc-out.expected
checking package dependencies
compiling EUnboundTyVar1.bs
Error: "EUnboundTyVar1.bs", line 30, column 39: (T0008)
  Unbound type variable `z'
